[JK] Missing doc entries for RTM packages.

--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -1836,6 +1836,10 @@ repositories:
       version: hydro-devel
     status: maintained
   hrpsys:
+    doc:
+      type: git
+      url: https://github.com/fkanehiro/hrpsys-base.git
+      version: master
     release:
       tags:
         release: release/jade/{package}/{version}
@@ -4042,6 +4046,10 @@ repositories:
       url: https://github.com/Kumikomi/openreroc_pwm.git
       version: master
   openrtm_aist:
+    doc:
+      type: git
+      url: https://github.com/tork-a/openrtm_aist-release.git
+      version: release/indigo/openrtm_aist
     release:
       tags:
         release: release/jade/{package}/{version}
@@ -6024,6 +6032,10 @@ repositories:
       url: https://github.com/tork-a/rtctree-release.git
       version: 3.0.1-0
   rtmros_common:
+    doc:
+      type: git
+      url: https://github.com/start-jsk/rtmros_common.git
+      version: master
     release:
       packages:
       - hrpsys_ros_bridge
@@ -6039,6 +6051,10 @@ repositories:
       version: 1.3.2-0
     status: developed
   rtshell:
+    doc:
+      type: git
+      url: https://github.com/gbiggs/rtshell.git
+      version: master
     release:
       tags:
         release: release/jade/{package}/{version}
@@ -6046,6 +6062,10 @@ repositories:
       version: 3.0.1-2
     status: developed
   rtsprofile:
+    doc:
+      type: git
+      url: https://github.com/tork-a/rtsprofile-release.git
+      version: release/hydro/rtsprofile
     release:
       tags:
         release: release/jade/{package}/{version}
