--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -715,6 +715,12 @@ repositories:
       url: https://github.com/RethinkRobotics-release/baxter-release.git
       version: 1.2.0-0
     status: developed
+  baxter_app_rpc:
+    doc:
+      type: git
+      url: https://github.com/tork-a/baxter_app_rpc.git
+      version: master
+    status: maintained
   baxter_common:
     release:
       packages:
