hironx_rpc: 0.0.2-0 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -3938,6 +3938,25 @@ repositories:
       url: https://github.com/heron/heron.git
       version: indigo-devel
     status: developed
+  hironx_rpc:
+    doc:
+      type: git
+      url: https://github.com/tork-a/hironx_rpc.git
+      version: master
+    release:
+      packages:
+      - hironx_rpc
+      - hironx_rpc_msgs
+      - hironx_rpc_server
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/tork-a/hironx_rpc-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/tork-a/hironx_rpc.git
+      version: master
+    status: maintained
   hokuyo3d:
     doc:
       type: git
