--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -2617,7 +2617,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/hrnr/m-explore.git
-      version: master
+      version: jade-devel
     release:
       packages:
       - explore_lite
@@ -2629,7 +2629,7 @@ repositories:
     source:
       type: git
       url: https://github.com/hrnr/m-explore.git
-      version: master
+      version: jade-devel
     status: developed
   maggie_devices_msgs:
     doc:
