m_explore: 2.0.0-1 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2767,6 +2767,24 @@ repositories:
       url: https://bitbucket.org/AndyZe/lyap_control.git
       version: master
     status: maintained
+  m_explore:
+    doc:
+      type: git
+      url: https://github.com/hrnr/m-explore.git
+      version: kinetic-devel
+    release:
+      packages:
+      - explore_lite
+      - multirobot_map_merge
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/hrnr/m-explore-release.git
+      version: 2.0.0-1
+    source:
+      type: git
+      url: https://github.com/hrnr/m-explore.git
+      version: kinetic-devel
+    status: developed
   manipulation_msgs:
     doc:
       type: git
