--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -14347,6 +14347,21 @@ repositories:
       url: https://github.com/ros-drivers/urg_node.git
       version: indigo-devel
     status: maintained
+  ursa_driver:
+    doc:
+      type: git
+      url: https://github.com/mikehosmar/ursa_driver.git
+      version: master
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/mikehosmar/ursa_driver-release.git
+      version: 0.1.1-0
+    source:
+      type: git
+      url: https://github.com/mikehosmar/ursa_driver.git
+      version: master
+    status: maintained
   usb_cam:
     doc:
       type: git
