Package abb indigo release 1.2.1

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -42,10 +42,12 @@ repositories:
       - abb_irb5400_support
       - abb_irb6600_support
       - abb_irb6640_moveit_config
+      - abb_irb6640_support
+      - abb_resources
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/ros-industrial-release/abb-release.git
-      version: 1.2.0-0
+      version: 1.2.1-0
     source:
       type: git
       url: https://github.com/ros-industrial/abb.git
