random_numbers: 0.3.1-1 in 'lunar/distribution.yaml' (#14332)
* random_numbers: 0.3.1-1 in 'lunar/distribution.yaml'

Releasing random_numbers for lunar.

    upstream repository: https://github.com/ros-planning/random_numbers.git
    release repository: https://github.com/ros-gbp/random_numbers-release.git
    distro file: lunar/distribution.yaml
    bloom version: 0.5.25

* Add doc entry and use master branch for source.

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -557,6 +557,21 @@ repositories:
       url: https://github.com/ros-visualization/qt_gui_core.git
       version: kinetic-devel
     status: maintained
+  random_numbers:
+    doc:
+      type: git
+      url: https://github.com/ros-planning/random_numbers.git
+      version: master
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/random_numbers-release.git
+      version: 0.3.1-1
+    source:
+      type: git
+      url: https://github.com/ros-planning/random_numbers.git
+      version: master
+    status: maintained
   realtime_tools:
     doc:
       type: git
