Add entry of python-tabulate-pip for debian/fedora

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2635,6 +2635,12 @@ python-tabulate:
     wily: [python-tabulate]
     xenial: [python-tabulate]
 python-tabulate-pip:
+  debian:
+    pip:
+      packages: [tabulate]
+  fedora:
+    pip:
+      packages: [tabulate]
   osx:
     pip:
       packages: [tabulate]
