add python-sip for yakkety (#14363)
* add python-sip for yakkety

* add python-sip for zesty

* fixing order

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2432,6 +2432,10 @@ python-sip:
     wily_python3: [python3-sip-dev]
     xenial: [python-sip-dev]
     xenial_python3: [python3-sip-dev]
+    yakkety: [python-sip-dev]
+    yakkety_python3: [python3-sip-dev]
+    zesty: [python-sip-dev]
+    zesty_python3: [python3-sip-dev]
 python-sip4:
   fedora: [sip]
   macports: [py27-sip4]
