Add python periphery pip lib (#14364)
* Add python periphery lib

* Add -pip suffix for pip-only lib name

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1595,6 +1595,19 @@ python-percol:
   ubuntu:
     pip:
       packages: [percol]
+python-periphery-pip:
+  debian:
+    pip:
+      packages: [python-periphery]
+  fedora:
+    pip:
+      packages: [python-periphery]
+  osx:
+    pip:
+      packages: [python-periphery]
+  ubuntu:
+    pip:
+      packages: [python-periphery]
 python-pexpect:
   arch: [python2-pexpect]
   debian: [python-pexpect]
