flaky: 3.1.0-0 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -3018,6 +3018,13 @@ repositories:
       url: https://github.com/Ikergune/firos.git
       version: master
     status: maintained
+  flaky:
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/asmodehn/flaky-rosrelease.git
+      version: 3.1.0-0
+    status: maintained
   flask_cors:
     release:
       tags:
