add rosdep key libxss1 (#14405)

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3023,6 +3023,11 @@ libxslt:
   fedora: [libxslt-devel]
   macports: [libxslt]
   ubuntu: [libxslt1-dev]
+libxss1:
+  arch: [libxss]
+  debian: [libxss1]
+  fedora: [libXScrnSaver]
+  ubuntu: [libxss1]
 libxt-dev:
   arch: [libxt]
   debian: [libxt-dev]
