add rosdep key libgconf2 (#14422)

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1555,6 +1555,11 @@ libgazebo7-dev:
   gentoo: [sci-electronics/gazebo]
   slackware: [gazebo]
   ubuntu: [libgazebo7-dev]
+libgconf2:
+  arch: [gconf]
+  debian: [libgconf-2-4]
+  fedora: [GConf2]
+  ubuntu: [libgconf-2-4]
 libgeographiclib-dev:
   fedora: [geographiclib]
   gentoo: [sci-geosciences/geographiclib]
