add ackermann_controller package to kinetic

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -12,6 +12,21 @@ release_platforms:
   - wily
   - xenial
 repositories:
+  ackermann_controller:
+    doc:
+      type: git
+      url: https://github.com/easymov/ackermann_controller.git
+      version: master
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/easymov/ackermann_controller-release.git
+      version: 0.1.0-0
+    source:
+      type: git
+      url: https://github.com/easymov/ackermann_controller.git
+      version: master
+    status: developed
   ackermann_msgs:
     doc:
       type: git
