Add qglviewer Qt4 rosdeps for Ubuntu yakkety and zesty (#14424)
* Add qglviewer Qt4 rosdeps for Ubuntu yakkety and zesty

* Add qglviewer Qt4 libs for debian stretch

* Reordering debian keys, let's try again

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2319,6 +2319,7 @@ libqglviewer-qt4:
   arch: [libqglviewer-qt4]
   debian:
     jessie: [libqglviewer2]
+    stretch: [libqglviewer-qt4-2]
     wheezy: [libqglviewer-qt4-2]
   fedora: [libQGLViewer]
   macports: [libQGLViewer]
@@ -2336,10 +2337,13 @@ libqglviewer-qt4:
     vivid: [libqglviewer2]
     wily: [libqglviewer2-qt4]
     xenial: [libqglviewer2-qt4]
+    yakkety: [libqglviewer2-qt4]
+    zesty: [libqglviewer2-qt4]
 libqglviewer-qt4-dev:
   arch: [libqglviewer-qt4]
   debian:
     jessie: [libqglviewer-dev]
+    stretch: [libqglviewer-qt4-dev]
     wheezy: [libqglviewer-qt4-dev]
   fedora: [libQGLViewer-devel]
   ubuntu:
@@ -2356,6 +2360,8 @@ libqglviewer-qt4-dev:
     vivid: [libqglviewer-dev]
     wily: [libqglviewer-dev-qt4]
     xenial: [libqglviewer-dev-qt4]
+    yakkety: [libqglviewer-dev-qt4]
+    zesty: [libqglviewer-dev-qt4]
 libqhull:
   arch: [qhull]
   debian: [libqhull-dev]
