Adding xsens_awinda to documentation index for indigo (#14451)
* Adding xsens_awinda to documentation index for indigo

* reviewed url - Adding xsens-awinda to documentation index for indigo

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -15153,6 +15153,16 @@ repositories:
       url: https://github.com/wavelab/ximea_camera.git
       version: devel-indigo
     status: maintained
+  xsens_awinda:
+    doc:
+      type: git
+      url: https://github.com/Raffa87/xsense-awinda.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/Raffa87/xsense-awinda.git
+      version: master
+    status: maintained
   xsens_driver:
     doc:
       type: git
