use homer release repos

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1871,14 +1871,18 @@ repositories:
     status: developed
   homer_msgs:
     release:
-      packages:
-      - homer_msgs
-      - homer_ptu_msgs
       tags:
         release: release/kinetic/{package}/{version}
-      url: https://gitlab.uni-koblenz.de/robbie/homer_msgs.git
-      version: 0.1.5-1
+      url: https://gitlab.uni-koblenz.de/robbie/homer_msgs-release.git
+      version: 0.1.6-1
     status: developed
+  homer_ptu_msgs:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://gitlab.uni-koblenz.de/robbie/homer_ptu_msgs-release.git
+      version: 0.1.7-2
+    status: maintained
   homer_robbie_architecture:
     release:
       tags:
