--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2319,7 +2319,7 @@ libqglviewer-qt4:
   arch: [libqglviewer-qt4]
   debian:
     jessie: [libqglviewer2]
-    stretch: [libqglviewer-qt4-2]
+    stretch: [libqglviewer2-qt4]
     wheezy: [libqglviewer-qt4-2]
   fedora: [libQGLViewer]
   macports: [libQGLViewer]
@@ -2343,7 +2343,7 @@ libqglviewer-qt4-dev:
   arch: [libqglviewer-qt4]
   debian:
     jessie: [libqglviewer-dev]
-    stretch: [libqglviewer-qt4-dev]
+    stretch: [libqglviewer-dev-qt4]
     wheezy: [libqglviewer-qt4-dev]
   fedora: [libQGLViewer-devel]
   ubuntu:
