--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1015,6 +1015,16 @@ python-httplib2:
     saucy: [python-httplib2]
     trusty: [python-httplib2]
     trusty_python3: [python3-httplib2]
+python-hypothesis:
+  debian: [python-hypothesis]
+  fedora: [python-hypothesis]
+  ubuntu:
+    xenial: [python-hypothesis]
+    xenial_python3: [python3-hypothesis]
+    yakkety: [python-hypothesis]
+    yakkety_python3: [python3-hypothesis]
+    zesty: [python-hypothesis]
+    zesty_python3: [python3-hypothesis]
 python-imaging:
   arch: [python2-pillow]
   debian: [python-imaging]
