added debian and fedora names of packages needed for homer_robot_face

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -641,6 +641,7 @@ festival:
       packages: [app-accessibility/festival]
   ubuntu: [festival, festvox-kallpc16k]
 festival-dev:
+  debian: [festival-dev]
   fedora: [festival-devel, festvox-kal-diphone]
   ubuntu: [festival-dev]
 ffmpeg:
@@ -1400,6 +1401,7 @@ libdrm-dev:
       packages: [x11-base/nouveau-drm]
   ubuntu: [libdrm-dev]
 libesd0-dev:
+  debian: [libesd0-dev]
   fedora: [esound-devel]
   ubuntu: [libesd0-dev]
 libespeak-dev:
@@ -1407,6 +1409,7 @@ libespeak-dev:
   fedora: [espeak-devel]
   ubuntu: [libespeak-dev]
 libestools-dev:
+  debian: [libestools2.1-dev]
   fedora: [festival-speechtools-devel]
   ubuntu:
     saucy: [libestools2.1-dev]
@@ -2302,6 +2305,7 @@ libpt-dev:
   fedora: [ptlib-devel]
   ubuntu: [libpt-dev]
 libpulse-dev:
+  debian: [libpulse-dev]
   fedora: [pulseaudio-libs-devel]
   ubuntu: [libpulse-dev]
 libqcustomplot-dev:
@@ -2481,6 +2485,8 @@ libqt5-widgets:
   slackware: [qt5]
   ubuntu: [libqt5widgets5]
 libqt5x11extras5-dev:
+  debian: [libqt5x11extras5-dev]
+  fedora: [libQt5X11Extras-devel]
   ubuntu: [libqt5x11extras5-dev]
 libqtgui4:
   arch: [qt4]
