fixed libestools-dev for debian

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1409,7 +1409,9 @@ libespeak-dev:
   fedora: [espeak-devel]
   ubuntu: [libespeak-dev]
 libestools-dev:
-  debian: [libestools2.1-dev]
+  debian:
+    jessie: [libestools2.1-dev]
+    stretch: [libestools-dev]
   fedora: [festival-speechtools-devel]
   ubuntu:
     saucy: [libestools2.1-dev]
