use correct libqt5x11extras5-dev package for fedora?

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2488,7 +2488,7 @@ libqt5-widgets:
   ubuntu: [libqt5widgets5]
 libqt5x11extras5-dev:
   debian: [libqt5x11extras5-dev]
-  fedora: [libQt5X11Extras-devel]
+  fedora: [qt5-qtx11extras-devel]
   ubuntu: [libqt5x11extras5-dev]
 libqtgui4:
   arch: [qt4]
