added python-expiringdict & python-xlib for ubuntu/xenial (#14359)
* added python-xlib for ubuntu

* Added rosdep keys for python-expiringdict

* changed python-expiringdict & python-xlib keys to pip for ubuntu/fedora/debian

* fix indentation for python-expiringdict & python-xlib

* fix typo for python-expiringdict & python-xlib keys

* using apt when available for python-expiringdict & python-xlib keys

* reordering debian versions for python-expiringdict & python-xlib keys

* collapsing ubuntu rules because available ...

... on all distros we target

* remove specific distributions versions for python-expiringdict & python-xlib keys

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -753,6 +753,12 @@ python-evdev:
     vivid: [python-evdev]
     wily: [python-evdev]
     xenial: [python-evdev]
+python-expiringdict:
+  debian: [python-expiringdict]
+  fedora:
+    pip:
+      packages: [expiringdict]
+  ubuntu: [python-expiringdict]
 python-falcon:
   debian: [python-falcon]
   fedora: [python-falcon]
@@ -3082,6 +3088,10 @@ python-wstool:
 python-wtforms:
   fedora: [python-wtforms]
   ubuntu: [python-wtforms]
+python-xlib:
+  debian: [python-xlib]
+  fedora: [python-xlib]
+  ubuntu: [python-xlib]
 python-yaml:
   arch: [python2-yaml]
   centos: [PyYAML]
