--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5998,6 +5998,22 @@ repositories:
       url: https://github.com/ros-drivers/rosserial.git
       version: jade-devel
     status: maintained
+  roswww:
+    doc:
+      type: git
+      url: https://github.com/tork-a/roswww.git
+      version: develop
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/tork-a/roswww-release.git
+      version: 0.1.10-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/tork-a/roswww.git
+      version: develop
+    status: maintained
   rplidar_ros:
     doc:
       type: git
