rotors_simulator: 2.1.0-0 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -11750,12 +11750,13 @@ repositories:
       - rotors_evaluation
       - rotors_gazebo
       - rotors_gazebo_plugins
+      - rotors_hil_interface
       - rotors_joy_interface
       - rotors_simulator
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/ethz-asl/rotors_simulator-release.git
-      version: 2.0.1-0
+      version: 2.1.0-0
     source:
       type: git
       url: https://github.com/ethz-asl/rotors_simulator.git
