--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -13336,6 +13336,21 @@ repositories:
       url: https://github.com/ros-simulation/stage_ros.git
       version: master
     status: maintained
+  static_tf:
+    doc:
+      type: git
+      url: https://github.com/DLu/static_tf.git
+      version: master
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/wu-robotics/static_tf_release.git
+      version: 0.0.1-1
+    source:
+      type: git
+      url: https://github.com/DLu/static_tf.git
+      version: master
+    status: developed
   staubli:
     doc:
       type: git
