added libalglib-dev (#14496)
* added libalglib-dev

* add debian and fedora packages for alglib

* changed alglib on fedora to the development version as well

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1211,6 +1211,10 @@ lib32asound2:
   debian: [lib32asound2]
   fedora: ['alsa-lib(%{__isa_name}-32)', alsa-lib]
   ubuntu: [lib32asound2]
+libalglib-dev:
+  debian: [libalglib-dev]
+  fedora: [alglib-devel]
+  ubuntu: [libalglib-dev]
 libann-dev:
   arch: [ann]
   debian: [libann-dev]
