add assimp to yakkety, zesty, stretch

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -90,6 +90,7 @@ assimp:
   debian:
     jessie: [libassimp-dev]
     sid: [libassimp-dev]
+    stretch: [libassimp-dev]
     wheezy: [libassimp-dev]
   fedora: [assimp]
   gentoo:
@@ -113,11 +114,14 @@ assimp:
     vivid: [libassimp-dev]
     wily: [libassimp-dev]
     xenial: [libassimp-dev]
+    yakkety: [libassimp-dev]
+    zesty: [libassimp-dev]
 assimp-dev:
   arch: [assimp]
   debian:
     jessie: [libassimp-dev]
     sid: [libassimp-dev]
+    stretch: [libassimp-dev]
     wheezy: [libassimp-dev]
   fedora: [assimp-devel]
   gentoo:
@@ -140,6 +144,8 @@ assimp-dev:
     vivid: [libassimp-dev]
     wily: [libassimp-dev]
     xenial: [libassimp-dev]
+    yakkety: [libassimp-dev]
+    zesty: [libassimp-dev]
 atlas:
   arch: [atlas-lapack]
   debian: [libatlas-base-dev]
