v4l-utils package dependency for Debian (#14500)

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -4116,6 +4116,7 @@ uvcdynctrl:
   ubuntu: [uvcdynctrl]
 v4l-utils:
   arch: [v4l-utils]
+  debian: [v4l-utils]
   fedora: [v4l-utils]
   ubuntu: [v4l-utils]
 valgrind:
