Test pull requests for pointgrey_camera_driver. (#14518)

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -4554,6 +4554,7 @@ repositories:
       url: https://github.com/ros-drivers-gbp/pointgrey_camera_driver-release.git
       version: 0.13.0-0
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/ros-drivers/pointgrey_camera_driver.git
       version: master
