--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -10791,6 +10791,22 @@ repositories:
       url: https://github.com/ros-aldebaran/romeo_virtual.git
       version: master
     status: maintained
+  roomblock:
+    release:
+      packages:
+      - roomblock_bringup
+      - roomblock_description
+      - roomblock_mapping
+      - roomblock_navigation
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/tork-a/roomblock-release.git
+      version: 0.0.1-0
+    source:
+      type: git
+      url: https://github.com/tork-a/roomblock.git
+      version: master
+    status: developed
   ros:
     doc:
       type: git
