octomap_msgs: 0.3.3-0 in 'lunar/distribution.yaml' [bloom] (#14523)

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -695,6 +695,21 @@ repositories:
     status: developed
     status_description: Prerelease based on version 1.8.0. The final version for ROS
       Lunar will (1.9.0)
+  octomap_msgs:
+    doc:
+      type: git
+      url: https://github.com/OctoMap/octomap_msgs.git
+      version: lunar-devel
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/octomap_msgs-release.git
+      version: 0.3.3-0
+    source:
+      type: git
+      url: https://github.com/OctoMap/octomap_msgs.git
+      version: lunar-devel
+    status: maintained
   opencv3:
     release:
       tags:
