xsens_driver: 2.1.0-0 in 'lunar/distribution.yaml' [bloom] (#14528)

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1363,6 +1363,21 @@ repositories:
       url: https://github.com/ros/xacro.git
       version: lunar-devel
     status: developed
+  xsens_driver:
+    doc:
+      type: git
+      url: https://github.com/ethz-asl/ethzasl_xsens_driver.git
+      version: master
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ethz-asl/ethzasl_xsens_driver-release.git
+      version: 2.1.0-0
+    source:
+      type: git
+      url: https://github.com/ethz-asl/ethzasl_xsens_driver.git
+      version: master
+    status: developed
   xv_11_laser_driver:
     doc:
       type: git
