--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -631,6 +631,22 @@ repositories:
       url: https://github.com/ros/message_runtime.git
       version: groovy-devel
     status: maintained
+  moveit_msgs:
+    doc:
+      type: git
+      url: https://github.com/ros-planning/moveit_msgs.git
+      version: kinetic-devel
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/moveit_msgs-release.git
+      version: 0.9.1-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros-planning/moveit_msgs.git
+      version: kinetic-devel
+    status: maintained
   nodelet_core:
     doc:
       type: git
