--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -647,6 +647,22 @@ repositories:
       url: https://github.com/ros-planning/moveit_msgs.git
       version: kinetic-devel
     status: maintained
+  moveit_resources:
+    doc:
+      type: git
+      url: https://github.com/ros-planning/moveit_resources.git
+      version: master
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/moveit_resources-release.git
+      version: 0.6.2-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros-planning/moveit_resources.git
+      version: master
+    status: developed
   nodelet_core:
     doc:
       type: git
