Adding thingmagic_usbpro to documentation index for distro (#14537)
* Adding thingmagic_usbpro to documentation index for distro

* Adding thingmagic_usbpro to documentation index for distro

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -13750,6 +13750,16 @@ repositories:
       url: https://github.com/bsb808/thingmagic_rfid.git
       version: master
     status: developed
+  thingmagic_usbpro:
+    doc:
+      type: git
+      url: https://gitlab.com/chambana/thingmagic_usbpro.git
+      version: master
+    source:
+      type: git
+      url: https://gitlab.com/chambana/thingmagic_usbpro.git
+      version: master
+    status: developed
   threemxl:
     doc:
       type: git
