--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -14934,6 +14934,21 @@ repositories:
       url: https://github.com/asmodehn/webargs-rosrelease.git
       version: 1.3.4-8
     status: maintained
+  webkit_dependency:
+    doc:
+      type: git
+      url: https://github.com/ros-visualization/webkit_dependency.git
+      version: indigo-devel
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/ros-gbp/webkit_dependency-release.git
+      version: 1.0.0-0
+    source:
+      type: git
+      url: https://github.com/ros-visualization/webkit_dependency.git
+      version: indigo-devel
+    status: maintained
   webtest:
     doc:
       type: git
