webkit_dependency: 1.0.0-0 in 'jade/distribution.yaml' [bloom]

--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -7298,6 +7298,21 @@ repositories:
       url: https://github.com/asmodehn/webargs-rosrelease.git
       version: 1.3.4-3
     status: maintained
+  webkit_dependency:
+    doc:
+      type: git
+      url: https://github.com/ros-visualization/webkit_dependency.git
+      version: indigo-devel
+    release:
+      tags:
+        release: release/jade/{package}/{version}
+      url: https://github.com/ros-gbp/webkit_dependency-release.git
+      version: 1.0.0-0
+    source:
+      type: git
+      url: https://github.com/ros-visualization/webkit_dependency.git
+      version: indigo-devel
+    status: maintained
   webtest:
     doc:
       type: git
