--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7778,6 +7778,21 @@ repositories:
       url: https://github.com/RobotWebTools/web_video_server.git
       version: master
     status: maintained
+  webkit_dependency:
+    doc:
+      type: git
+      url: https://github.com/ros-visualization/webkit_dependency.git
+      version: kinetic-devel
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ros-gbp/webkit_dependency-release.git
+      version: 1.1.0-0
+    source:
+      type: git
+      url: https://github.com/ros-visualization/webkit_dependency.git
+      version: kinetic-devel
+    status: maintained
   webtest:
     release:
       tags:
