add Lunar rules for ogre (#14558)
See:

- http://packages.ubuntu.com/yakkety/libogre-1.9-dev
- http://packages.ubuntu.com/zesty/libogre-1.9-dev
- https://packages.debian.org/stretch/libogre-1.9-dev

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2034,6 +2034,7 @@ libogre-dev:
   debian:
     jessie: [libogre-1.9-dev]
     sid: [libogre-1.9-dev]
+    stretch: [libogre-1.9-dev]
     wheezy: [libogre-dev]
   fedora: [ogre-devel]
   gentoo: [dev-games/ogre]
@@ -2055,6 +2056,8 @@ libogre-dev:
     vivid: [libogre-1.9-dev]
     wily: [libogre-1.9-dev]
     xenial: [libogre-1.9-dev]
+    yakkety: [libogre-1.9-dev]
+    zesty: [libogre-1.9-dev]
 libois-dev:
   arch: [ois]
   debian: [libois-dev]
