rviz: 1.12.4-0 in 'lunar/distribution.yaml' [bloom] (#14559)

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1320,6 +1320,22 @@ repositories:
       url: https://github.com/orocos/rtt_ros_integration.git
       version: toolchain-2.9
     status: maintained
+  rviz:
+    doc:
+      type: git
+      url: https://github.com/ros-visualization/rviz.git
+      version: kinetic-devel
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/rviz-release.git
+      version: 1.12.4-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros-visualization/rviz.git
+      version: kinetic-devel
+    status: maintained
   srdfdom:
     doc:
       type: git
