[dep][ubuntu/debian] Add geographiclib-tools/libgeographiclib-dev (#14566)
* [dep][ubuntu/debian] Add geographiclib-tools

* adding fedora rule for GeographicLib

The ubuntu package has the same executables: http://packages.ubuntu.com/yakkety/amd64/geographiclib-tools/filelist
https://apps.fedoraproject.org/packages/GeographicLib/contents/

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -812,6 +812,7 @@ gdal-bin:
   gentoo: [sci-libs/gdal]
   ubuntu: [gdal-bin]
 geographiclib:
+  debian: [libgeographiclib-dev]
   fedora: [GeographicLib-devel]
   ubuntu:
     precise: [libgeographiclib-dev]
@@ -823,6 +824,10 @@ geographiclib:
     vivid: [libgeographic-dev]
     wily: [libgeographic-dev]
     xenial: [libgeographic-dev]
+geographiclib-tools:
+  debian: [geographiclib-tools]
+  fedora: [GeographicLib]
+  ubuntu: [geographiclib-tools]
 geos:
   arch: [geos]
   fedora: [geos-devel]
