Add geographiclib python dependency (#14567)
* Add geographic lib python dependencies

* Add fedora and debian python-geographiclib rules

* Remove python-geographiclib-pip

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -912,6 +912,10 @@ python-gdown-pip:
   ubuntu:
     pip:
       packages: [gdown]
+python-geographiclib:
+  debian: [python-geographiclib]
+  fedora: [python-GeographicLib]
+  ubuntu: [python-geographiclib]
 python-gevent:
   debian: [python-gevent]
   fedora: [python-gevent]
