Update ur_modern_driver url (#14565)
* Update ur_modern_driver url

Fixes #14522

* Update to master branch

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -14329,8 +14329,8 @@ repositories:
       version: 0.0.3-0
     source:
       type: git
-      url: https://github.com/TheDash/ur_modern_driver.git
-      version: indigo-devel
+      url: https://github.com/ThomasTimm/ur_modern_driver.git
+      version: master
     status: maintained
   urdf_tools:
     doc:
