added python-zbar (#14572)
* added python-zbar

* fixed indentation

* python-zbar: added debian package

* python-zbar: added fedora package

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3156,6 +3156,10 @@ python-yaml:
     yakkety_python3: [python3-yaml]
     zesty: [python-yaml]
     zesty_python3: [python3-yaml]
+python-zbar:
+  debian: [python-zbar]
+  fedora: [zbar-pygtk]
+  ubuntu: [python-zbar]
 python-zmq:
   arch: [python2-pyzmq]
   debian: [python-zmq]
