add log_server package to kinetic distribution (#14575)
* add log_server package to kinetic distribution

* fix typo in lpms_imu version

* set log_server version to kinetic-devel

* revert log_server to version 0.1.1-1

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2766,6 +2766,13 @@ repositories:
       url: https://github.com/orocos-toolchain/log4cpp.git
       version: toolchain-2.9
     status: maintained
+  log_server:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/easymov/log_server-release.git
+      version: 0.1.1-1
+    status: developed
   lpms_imu:
     doc:
       type: git
