--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5640,6 +5640,13 @@ repositories:
       url: https://github.com/iirob/ros_opcua_communication.git
       version: kinetic-devel
     status: developed
+  ros_peerjs:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/easymov/ros_peerjs-release.git
+      version: 0.1.1-0
+    status: developed
   ros_tutorials:
     doc:
       type: git
