image_transport_plugins: 1.9.5-0 in 'lunar/distribution.yaml' [bloom] (#14582)

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -548,6 +548,25 @@ repositories:
       type: git
       url: https://github.com/ros-perception/image_pipeline.git
       version: indigo
+  image_transport_plugins:
+    doc:
+      type: git
+      url: https://github.com/ros-perception/image_transport_plugins.git
+      version: indigo-devel
+    release:
+      packages:
+      - compressed_depth_image_transport
+      - compressed_image_transport
+      - image_transport_plugins
+      - theora_image_transport
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/image_transport_plugins-release.git
+      version: 1.9.5-0
+    source:
+      type: git
+      url: https://github.com/ros-perception/image_transport_plugins.git
+      version: indigo-devel
     status: maintained
   interactive_markers:
     doc:
