Adding tensor_field_nav to documentation index for distro (#14589)

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -13682,6 +13682,16 @@ repositories:
       url: https://github.com/ros-teleop/teleop_twist_keyboard.git
       version: master
     status: maintained
+  tensor_field_nav:
+    doc:
+      type: git
+      url: https://github.com/zlt1991/tensor_field_nav.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/zlt1991/tensor_field_nav.git
+      version: master
+    status: maintained
   terarangerduo-ros:
     release:
       packages:
