Add abb repos to doc index for Kinetic. (#14593)

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -12,6 +12,18 @@ release_platforms:
   - wily
   - xenial
 repositories:
+  abb:
+    doc:
+      type: git
+      url: https://github.com/ros-industrial/abb.git
+      version: kinetic-devel
+    status: developed
+  abb_experimental:
+    doc:
+      type: git
+      url: https://github.com/ros-industrial/abb_experimental.git
+      version: kinetic-devel
+    status: developed
   ackermann_controller:
     doc:
       type: git
