--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -53,6 +53,12 @@ repositories:
       url: https://github.com/ros-industrial/abb.git
       version: indigo
     status: developed
+  abb_experimental:
+    doc:
+      type: git
+      url: https://github.com/ros-industrial/abb_experimental.git
+      version: indigo-devel
+    status: developed
   acado:
     doc:
       type: git
