--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1210,6 +1210,18 @@ repositories:
       url: https://github.com/ros/executive_smach.git
       version: indigo-devel
     status: maintained
+  fanuc:
+    doc:
+      type: git
+      url: https://github.com/ros-industrial/fanuc.git
+      version: indigo-devel
+    status: developed
+  fanuc_experimental:
+    doc:
+      type: git
+      url: https://github.com/ros-industrial/fanuc_experimental.git
+      version: indigo-devel
+    status: developed
   fawkes_msgs:
     doc:
       type: git
