--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -9247,6 +9247,13 @@ repositories:
       url: https://github.com/asmodehn/pyros-config.git
       version: master
     status: developed
+  pyros_interfaces_ros:
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/asmodehn/pyros-rosinterface-rosrelease.git
+      version: 0.4.0-0
+    status: developed
   pyros_setup:
     release:
       tags:
