--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5184,13 +5184,14 @@ repositories:
       version: kinetic-devel
     release:
       packages:
+      - robotis_controller
       - robotis_device
       - robotis_framework
       - robotis_framework_common
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/ROBOTIS-GIT-release/ROBOTIS-Framework-release.git
-      version: 0.2.1-0
+      version: 0.2.2-0
     source:
       type: git
       url: https://github.com/ROBOTIS-GIT/ROBOTIS-Framework.git
