rqt_service_caller: 0.4.8-0 in 'lunar/distribution.yaml' [bloom] (#14627)

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1402,6 +1402,21 @@ repositories:
       url: https://github.com/ros-visualization/rqt_plot.git
       version: master
     status: maintained
+  rqt_service_caller:
+    doc:
+      type: git
+      url: https://github.com/ros-visualization/rqt_service_caller.git
+      version: master
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/rqt_service_caller-release.git
+      version: 0.4.8-0
+    source:
+      type: git
+      url: https://github.com/ros-visualization/rqt_service_caller.git
+      version: master
+    status: maintained
   rqt_topic:
     doc:
       type: git
