rqt_graph: 0.4.8-0 in 'lunar/distribution.yaml' [bloom] (#14632)
* rqt_graph: 0.4.8-0 in 'lunar/distribution.yaml' [bloom]

* Update distribution.yaml

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1405,6 +1405,22 @@ repositories:
       url: https://github.com/ros-visualization/rqt_console.git
       version: master
     status: maintained
+  rqt_graph:
+    doc:
+      type: git
+      url: https://github.com/ros-visualization/rqt_graph.git
+      version: master
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/rqt_graph-release.git
+      version: 0.4.8-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros-visualization/rqt_graph.git
+      version: master
+    status: maintained
   rqt_logger_level:
     doc:
       type: git
