add python-psutil for yakkety and zesty

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1714,6 +1714,8 @@ python-psutil:
     vivid: [python-psutil]
     wily: [python-psutil]
     xenial: [python-psutil]
+    yakkety: [python-psutil]
+    zesty: [python-psutil]
 python-psycopg2:
   fedora: [python-psycopg2]
   ubuntu:
