add python-opengl for yakkety and zesty

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1523,6 +1523,8 @@ python-opengl:
     vivid: [python-opengl]
     wily: [python-opengl]
     xenial: [python-opengl]
+    yakkety: [python-opengl]
+    zesty: [python-opengl]
 python-openssl:
   debian: [python-openssl]
   ubuntu: [python-openssl]
