Add KUKA ROS-I repo to Indigo.

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -5434,6 +5434,16 @@ repositories:
       url: https://github.com/ros-drivers/korg_nanokontrol.git
       version: master
     status: maintained
+  kuka:
+    doc:
+      type: git
+      url: https://github.com/ros-industrial/kuka.git
+      version: indigo-devel
+    source:
+      type: git
+      url: https://github.com/ros-industrial/kuka.git
+      version: indigo-devel
+    status: developed
   kuka_experimental:
     doc:
       type: git
