[K, L] EOL/remove household_objects_database_msgs, manipulation_msgs. (#14694)
EOL/removal decision discussed at https://github.com/ros-interactive-manipulation/household_objects_database_msgs/issues/5, https://github.com/ros-interactive-manipulation/manipulation_msgs/issues/9

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1955,7 +1955,7 @@ repositories:
       type: git
       url: https://github.com/ros-interactive-manipulation/household_objects_database_msgs.git
       version: hydro-devel
-    status: maintained
+    status: end-of-life
   hrpsys:
     doc:
       type: git
@@ -2896,7 +2896,7 @@ repositories:
       type: git
       url: https://github.com/ros-interactive-manipulation/manipulation_msgs.git
       version: hydro-devel
-    status: maintained
+    status: end-of-life
   manipulator_h:
     doc:
       type: git
