Adding velo2cam_calibration and velo2cam_gazebo to documentation index for kinetic (#14702)
* Adding velo2cam_gazebo to documentation index for kinetic

* Adding velo2cam_calibration to documentation index for kinetic

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7641,6 +7641,16 @@ repositories:
       url: https://github.com/ethz-asl/variant.git
       version: master
     status: developed
+  velo2cam_calibration:
+    doc:
+      type: git
+      url: https://github.com/beltransen/velo2cam_calibration.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/beltransen/velo2cam_calibration.git
+      version: master
+    status: maintained
   velo2cam_gazebo:
     doc:
       type: git
