Updating my Github username.

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -5995,7 +5995,7 @@ repositories:
     release:
       tags:
         release: release/indigo/{package}/{version}
-      url: https://github.com/AndyZelenak/lyap_control-release.git
+      url: https://github.com/AndyZe/lyap_control-release.git
       version: 0.0.13-0
     source:
       type: git
@@ -8545,7 +8545,7 @@ repositories:
     release:
       tags:
         release: release/indigo/{package}/{version}
-      url: https://github.com/AndyZelenak/pid-release.git
+      url: https://github.com/AndyZe/pid-release.git
       version: 0.0.20-0
     source:
       type: git
