--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1093,9 +1093,9 @@ repositories:
       version: master
     release:
       tags:
-        release: release/kinetic/{package}/{version}
-      url: https://github.com/AndyZelenak/pid-release.git
-      version: 0.0.20-0
+        release: release/lunar/{package}/{version}
+      url: https://github.com/AndyZe/pid-release.git
+      version: 0.0.21-4
     source:
       type: git
       url: https://bitbucket.org/AndyZe/pid.git
