--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2860,7 +2860,7 @@ repositories:
     release:
       tags:
         release: release/kinetic/{package}/{version}
-      url: https://github.com/AndyZelenak/lyap_control-release.git
+      url: https://github.com/AndyZe/lyap_control-release.git
       version: 0.0.13-0
     source:
       type: git
@@ -4555,7 +4555,7 @@ repositories:
     release:
       tags:
         release: release/kinetic/{package}/{version}
-      url: https://github.com/AndyZelenak/pid-release.git
+      url: https://github.com/AndyZe/pid-release.git
       version: 0.0.20-0
     source:
       type: git
