rtt_ros_integration: 2.9.0-0 in 'kinetic/distribution.yaml' [bloom] (#14850)

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6797,7 +6797,10 @@ repositories:
       - rtt_tf
       - rtt_trajectory_msgs
       - rtt_visualization_msgs
+      tags:
+        release: release/kinetic/{package}/{version}
       url: https://github.com/orocos-gbp/rtt_ros_integration-release.git
+      version: 2.9.0-0
     source:
       type: git
       url: https://github.com/orocos/rtt_ros_integration.git
