Enable CI for rqt_rviz (#14856)
* Enable CI for rqt_rviz

* linter

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6571,6 +6571,7 @@ repositories:
       url: https://github.com/ros-gbp/rqt_rviz-release.git
       version: 0.5.7-0
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/ros-visualization/rqt_rviz.git
       version: master
