--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1994,6 +1994,7 @@ repositories:
       url: https://github.com/ros-gbp/rqt_rviz-release.git
       version: 0.5.8-0
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/ros-visualization/rqt_rviz.git
       version: master
