Adding lidar_camera_calibration to documentation index for kinetic (#14982)
* Adding lidar_camera_calibration to documentation index for kinetic

* Adding lidar_camera_calibration to documentation index for distro

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2793,6 +2793,15 @@ repositories:
       type: git
       url: https://github.com/SICKAG/libsick_ldmrs.git
       version: master
+  lidar_camera_calibration:
+    doc:
+      type: git
+      url: https://github.com/ankitdhall/lidar_camera_calibration.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/ankitdhall/lidar_camera_calibration.git
+      version: master
   linux_peripheral_interfaces:
     doc:
       type: git
