Move kdl parser (jade, kinetic, lunar) (#15002)
* Move KDL parser jade

* move KDL parser kinetic

* Move KDL parser lunar

* Bump released version in lunar

* Test pull requests in lunar

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2476,6 +2476,25 @@ repositories:
       url: https://github.com/uos/katana_driver.git
       version: kinetic
     status: developed
+  kdl_parser:
+    doc:
+      type: git
+      url: https://github.com/ros/kdl_parser.git
+      version: kinetic-devel
+    release:
+      packages:
+      - kdl_parser
+      - kdl_parser_py
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ros-gbp/kdl_parser-release.git
+      version: 1.12.10-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/kdl_parser.git
+      version: kinetic-devel
+    status: maintained
   kobuki:
     doc:
       type: git
@@ -5219,8 +5238,6 @@ repositories:
     release:
       packages:
       - joint_state_publisher
-      - kdl_parser
-      - kdl_parser_py
       - robot_model
       - urdf
       - urdf_parser_plugin
