Add rosdep for msgpack (#15015)
* Add rosdep for msgpack

* #15015: Collape ubuntu rules

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3317,6 +3317,11 @@ mrpt:
     wily: [libmrpt-dev]
     xenial: [libmrpt-dev]
     yakkety: [libmrpt-dev]
+msgpack:
+  arch: [msgpack-c]
+  debian: [libmsgpack-dev]
+  fedora: [msgpack-devel]
+  ubuntu: [libmsgpack-dev]
 muparser:
   debian: [libmuparser-dev]
   fedora: [muParser-devel]
