Add uos_tools to jade + kinetic

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -8104,6 +8104,16 @@ repositories:
       url: https://github.com/ros-geographic-info/unique_identifier.git
       version: master
     status: maintained
+  uos_tools:
+    doc:
+      type: git
+      url: https://github.com/uos/uos_tools.git
+      version: kinetic
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/uos/uos_tools.git
+      version: kinetic
   urdf_tutorial:
     doc:
       type: git
