--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -7397,6 +7397,16 @@ repositories:
       url: https://github.com/ros-geographic-info/unique_identifier.git
       version: master
     status: maintained
+  uos_tools:
+    doc:
+      type: git
+      url: https://github.com/uos/uos_tools.git
+      version: jade
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/uos/uos_tools.git
+      version: jade
   urdf_tutorial:
     doc:
       type: git
