Add smbclient to rosdep/base.yaml (#15030)
* Update base.yaml

added smbclient for ubuntu

* Update base.yaml

added smbclient for arch, deb, fedora, ubuntu

arch-linux (https://www.archlinux.org/packages/?name=smbclient)
debian (https://packages.debian.org/search?searchon=sourcenames&keywords=smbclient)
fedora (http://www.rpmfind.net/linux/rpm2html/search.php?query=samba-client)
ubuntu (http://packages.ubuntu.com/search?keywords=smbclient)

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3853,6 +3853,11 @@ smartmontools:
   debian: [smartmontools]
   fedora: [smartmontools]
   ubuntu: [smartmontools]
+smbclient:
+  arch: [smbclient]
+  debian: [smbclient]
+  fedora: [samba-client]
+  ubuntu: [smbclient]
 snappy:
   arch: [snappy]
   fedora: [snappy]
