Adding packages to documentation index for indigo and kinetic (#15038)
* Adding asr_rapidxml to documentation index for indigo and kinetic

* Adding asr_ros_uri to documentation index for indigo and kinetic

* Adding asr_ivt and asr_ivt_bridge to documentation index for indigo and kinetic

* Adding asr_xsd2cpp to documentation index for indigo and kinetic

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -164,6 +164,16 @@ repositories:
       type: git
       url: https://github.com/asr-ros/asr_ftc_local_planner.git
       version: master
+  asr_ivt:
+    doc:
+      type: git
+      url: https://github.com/asr-ros/asr_ivt.git
+      version: master
+  asr_ivt_bridge:
+    doc:
+      type: git
+      url: https://github.com/asr-ros/asr_ivt_bridge.git
+      version: master
   asr_mild_base_driving:
     doc:
       type: git
@@ -198,6 +208,21 @@ repositories:
     doc:
       type: git
       url: https://github.com/asr-ros/asr_navfn.git
+      version: master
+  asr_rapidxml:
+    doc:
+      type: git
+      url: https://github.com/asr-ros/asr_rapidxml.git
+      version: master
+  asr_ros_uri:
+    doc:
+      type: git
+      url: https://github.com/asr-ros/asr_ros_uri.git
+      version: master
+  asr_xsd2cpp:
+    doc:
+      type: git
+      url: https://github.com/asr-ros/asr_xsd2cpp.git
       version: master
   astra_camera:
     doc:
