laser_odometry: 0.0.1-0 in 'indigo/distribution.yaml' [bloom] (#15039)
* laser_odometry: 0.0.1-0 in 'indigo/distribution.yaml' [bloom]

* Fix REP

Fix REP

* Fix source version

Fix source version

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -5779,6 +5779,21 @@ repositories:
       url: https://github.com/ros-perception/laser_geometry.git
       version: indigo-devel
     status: maintained
+  laser_odometry:
+    release:
+      packages:
+      - laser_odometry
+      - laser_odometry_core
+      - laser_odometry_node
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/artivis/laser_odometry-release.git
+      version: 0.0.1-0
+    source:
+      type: git
+      url: https://github.com/artivis/laser_odometry.git
+      version: master
+    status: developed
   laser_pipeline:
     doc:
       type: git
