turtlebot3_simulations: 0.1.4-1 in 'kinetic/distribution.yaml' [bloom] (#15048)

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7803,6 +7803,26 @@ repositories:
       url: https://github.com/ROBOTIS-GIT/turtlebot3_msgs.git
       version: kinetic-devel
     status: maintained
+  turtlebot3_simulations:
+    doc:
+      type: git
+      url: https://github.com/ROBOTIS-GIT/turtlebot3_simulations.git
+      version: kinetic-devel
+    release:
+      packages:
+      - turtlebot3_fake
+      - turtlebot3_gazebo
+      - turtlebot3_simulations
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ROBOTIS-GIT-release/turtlebot3_simulations-release.git
+      version: 0.1.4-1
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ROBOTIS-GIT/turtlebot3_simulations.git
+      version: kinetic-devel
+    status: developed
   turtlebot_apps:
     doc:
       type: git
