add python qt4 package for gentoo (#15076)

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2111,6 +2111,7 @@ python-qt-bindings-qwt5:
 python-qt-bindings-webkit:
   debian: [python-qt4]
   fedora: [PyQt4]
+  gentoo: [dev-python/PyQt4]
   ubuntu:
     saucy: [python-qt4]
     trusty: [python-qt4]
