Added more Gentoo dependencies. (#15077)

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -665,7 +665,7 @@ ffmpeg:
     stretch: [ffmpeg, libavcodec-dev, libavformat-dev, libavutil-dev, libswscale-dev]
     wheezy: [ffmpeg, libavcodec-dev, libavformat-dev, libavutil-dev, libswscale-dev]
   fedora: [ffmpeg-devel]
-  gentoo: [media-video/ffmpeg]
+  gentoo: [virtual/ffmpeg]
   macports: [ffmpeg]
   opensuse: [ffmpeg]
   slackware: [ffmpeg]
@@ -1472,6 +1472,7 @@ libfcl-dev:
     jessie: [libfcl-0.5-dev]
     stretch: [libfcl-dev]
   fedora: [fcl-devel]
+  gentoo: [sci-libs/fcl]
   ubuntu:
     wily: [libfcl-0.5-dev]
     xenial: [libfcl-0.5-dev]
@@ -2117,6 +2118,7 @@ libopenni-dev:
   arch: [openni]
   debian: [libopenni-dev]
   fedora: [openni-devel]
+  gentoo: [dev-libs/OpenNi]
   ubuntu: [libopenni-dev]
 libopenni-nite-dev:
   arch: [primesense-nite]
@@ -2383,6 +2385,7 @@ libqglviewer-qt4:
     stretch: [libqglviewer2-qt4]
     wheezy: [libqglviewer-qt4-2]
   fedora: [libQGLViewer]
+  gentoo: [x11-libs/libQGLViewer]
   macports: [libQGLViewer]
   ubuntu:
     lucid: [libqglviewer-qt4-2]
@@ -2407,6 +2410,7 @@ libqglviewer-qt4-dev:
     stretch: [libqglviewer-dev-qt4]
     wheezy: [libqglviewer-qt4-dev]
   fedora: [libQGLViewer-devel]
+  gentoo: [x11-libs/libQGLViewer]
   ubuntu:
     lucid: [libqglviewer-qt4-dev]
     maverick: [libqglviewer-qt4-dev]
@@ -2869,6 +2873,7 @@ liburdfdom-tools:
   arch: [urdfdom]
   debian: [liburdfdom-tools]
   fedora: [urdfdom]
+  gentoo: [dev-libs/urdfdom]
   ubuntu: [liburdfdom-tools]
 libusb:
   arch: [libusb-compat]
@@ -3027,6 +3032,7 @@ libvtk-qt:
 libwebp-dev:
   debian: [libwebp-dev]
   fedora: [libwebp-devel]
+  gentoo: [media-libs/libwebp]
   ubuntu: [libwebp-dev]
 libx11:
   arch: [libx11]
@@ -3074,6 +3080,7 @@ libxi-dev:
   arch: [libxi]
   debian: [libxi-dev]
   fedora: [libXi-devel]
+  gentoo: [x11-libs/libXi]
   ubuntu: [libxi-dev]
 libxinerama-dev:
   arch: [libxinerama]
@@ -3105,6 +3112,7 @@ libxmu-dev:
   arch: [libxmu]
   debian: [libxmu-dev]
   fedora: [libXmu-devel]
+  gentoo: [x11-libs/libXmu]
   ubuntu: [libxmu-dev]
 libxrandr:
   arch: [libxrandr]
@@ -3161,6 +3169,7 @@ linux-headers-generic:
     stretch: [linux-headers-4.9.0-3-all]
     wheezy: [linux-headers-3.2.0-4-all]
   fedora: [kernel-headers, kernel-devel]
+  gentoo: [sys-kernel/linux-headers]
   ubuntu: [linux-headers-generic]
 linux-kernel-headers:
   arch: [linux-api-headers]
@@ -3331,6 +3340,7 @@ msgpack:
 muparser:
   debian: [libmuparser-dev]
   fedora: [muParser-devel]
+  gentoo: [dev-cpp/muParser]
   ubuntu: [libmuparser-dev]
 nasm:
   arch: [nasm]
@@ -4118,6 +4128,7 @@ tinyxml2:
   arch: [tinyxml2]
   debian: [libtinyxml2-dev]
   fedora: [tinyxml2-devel]
+  gentoo: [dev-libs/tinyxml2]
   ubuntu: [libtinyxml2-dev]
 tix:
   arch: [tix]
@@ -4193,7 +4204,7 @@ uuid:
   debian: [uuid-dev]
   fedora: [libuuid-devel]
   freebsd: [e2fsprogs-libuuid]
-  gentoo: [util-linux]
+  gentoo: [sys-apps/util-linux]
   macports: [ossp-uuid]
   opensuse: [libuuid-devel]
   rhel: [libuuid-devel]
