--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -84,7 +84,7 @@ python:
   debian: [python-dev]
   fedora: [python-devel]
   freebsd: [python]
-  gentoo: [python]
+  gentoo: [dev-lang/python]
   macports: [python26, python_select]
   opensuse: [python-devel]
   rhel: [python-devel]
@@ -161,7 +161,7 @@ python-argparse:
     stretch: [libpython2.7-stdlib]
     wheezy: [python-argparse]
   fedora: [python]
-  gentoo: [python]
+  gentoo: [dev-lang/python]
   macports: [py27-argparse]
   opensuse: [python-argparse]
   slackware:
@@ -840,6 +840,7 @@ python-freezegun-pip:
 python-future:
   debian: [python-future]
   fedora: [python-future]
+  gentoo: [dev-python/future]
   osx:
     pip:
       packages: [future]
@@ -1181,6 +1182,7 @@ python-lxml:
   arch: [python2-lxml]
   debian: [python-lxml]
   fedora: [python-lxml]
+  gentoo: [dev-python/lxml]
   ubuntu: [python-lxml]
 python-mahotas:
   ubuntu:
@@ -1743,6 +1745,7 @@ python-pyassimp:
     stretch: [python-pyassimp]
     wheezy: [python-pyassimp]
   fedora: [assimp-python]
+  gentoo: [dev-libs/assimp]
   osx:
     lion:
       homebrew:
@@ -1958,6 +1961,7 @@ python-pyproj:
   arch: [python2-pyproj]
   debian: [python-pyproj]
   fedora: [pyproj]
+  gentoo: [dev-python/pyproj]
   ubuntu: [python-pyproj]
 python-pyquery:
   debian: [python-pyquery]
@@ -2431,6 +2435,7 @@ python-setuptools:
   arch: [python2-distribute]
   debian: [python-setuptools]
   fedora: [python-setuptools]
+  gentoo: [dev-python/setuptools]
   macports: [py27-setuptools]
   ubuntu:
     lucid: [python-setuptools]
@@ -3128,7 +3133,7 @@ python-yaml:
   debian: [python-yaml]
   fedora: [PyYAML]
   freebsd: [py27-yaml]
-  gentoo: [pyyaml]
+  gentoo: [dev-python/pyyaml]
   macports: [py27-yaml]
   opensuse: [python-PyYAML]
   rhel: [PyYAML]
