fix ATLAS dependency (#15080)

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -157,7 +157,7 @@ atlas:
   fedora: [atlas-devel]
   gentoo:
     portage:
-      packages: [media-libs/atlas-c++]
+      packages: [sci-libs/atlas]
   macports: [atlas]
   ubuntu: [libatlas-base-dev]
 autoconf:
